# ML-Dog-Facial-Recognition-FYP

./: .gitignore  LICENSE  README.md  docker-compose.yml
detection-service/: Dockerfile  pyproject.toml  requirements.txt
detection-service/detection_service/: app.py  pyproject.toml
detection-service/detection_service/detection_service/: app.py
detection-service/detection_service/detection_service/imageProcessing/: imageProcessor.py
detection-service/detection_service/detection_service/model/: detectionModel.py
frontend-app/: Dockerfile  next.config.js  package-lock.json  package.json
frontend-app/pages/: index.tsx  search.tsx  upload.tsx
frontend-app/pages/search/: index.tsx
frontend-app/pages/upload/: done.tsx  new.tsx
frontend-app/src/components/AppBar/: index.tsx
frontend-app/src/components/Confidence/: index.tsx
frontend-app/src/components/ImageUploader/: cropPanel.tsx  imageCropper.tsx  index.tsx
frontend-app/src/components/LayerMenu/: index.tsx
frontend-app/src/components/ProfileList/: index.tsx
frontend-app/src/components/ProfileScroller/: index.tsx
frontend-app/src/components/ProfileViewer/: index.tsx
frontend-app/src/components/ServiceStatusItem/: index.tsx  indicator.tsx
frontend-app/src/utils/: index.ts
frontend-app/styles/: globals.css
nginx/: default.conf
notebooks/: DogFaceDetector_YOLO_annotations_Generation.ipynb  YoloV7DogFaceDetector.ipynb
profile-service/: .gitignore  Dockerfile  app.ts  package-lock.json  package.json
profile-service/src/DataStores/: DataStore.ts  ProfileDataStore.ts
profile-service/src/Database/: ImageSchema.ts  PetProfileSchema.ts
profile-service/src/Database/Utility/: MongoConnectionProvider.ts
profile-service/src/Profiles/: IProfile.ts  IStoredImage.ts  ProfileImage.ts  ProfileManager.ts
profile-service/src/Routes/: index.ts  profiles.ts
profile-service/src/Startup/: routes.ts
recognition-service/: .env.dev  Dockerfile  pyproject.toml  requirements.txt
recognition-service/recognition_service/: __init__.py  app.py  configuration.py  imageProcessor.py  mongoConnector.py  profileManager.py
recognition-service/recognition_service/datastores/: profileDatastore.py
recognition-service/recognition_service/recognition/: nearestNeighbourClassifier.py  recognitionService.py
