[tool.poetry]
name = "recognition-service"
version = "0.1.0"
description = ""
authors = ["Matt Kirby <MattJKirby@outlook.com>"]
readme = "README.md"
packages = [{include = "recognition_service"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
