[tool.poetry]
name = "detection-service"
version = "0.1.0"
description = ""
authors = ["Matt Kirby <MattJKirby@outlook.com>"]
readme = "README.md"
packages = [{include = "detection_service"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
pillow = "^9.3.0"
torch = {url = "https://files.pythonhosted.org/packages/79/b3/eaea3fc35d0466b9dae1e3f9db08467939347b3aaa53c0fd81953032db33/torch-1.13.0-cp310-none-macosx_11_0_arm64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
